--- a/css/style.css
+++ b/css/style.css
@@ -912,6 +912,134 @@ img {
     padding-bottom: 0px;
   }
 }
+/* CONTATO */
+#contato {
+  background: linear-gradient(var(--cor-11) 600px, var(--cor-1) 0px);
+}
+
+.contato {
+  display: grid;
+  grid-template-columns: 1fr 2fr;
+}
+
+.contato-dados,
+.contato-formulario {
+  padding: 60px;
+  box-shadow: 0 1px 2px rgba(0, 0, 0, 0.1);
+}
+.contato-dados {
+  background: var(--cor-12);
+  border-radius: 5px 0 0 5px;
+}
+.contato-formulario {
+  background: var(--cor-0);
+  border-radius: 0 5px 5px 0;
+}
+.contato-dados h2 {
+  margin-bottom: 60px;
+}
+.contato-endereco {
+  margin-bottom: 32px;
+  padding-left: 28px;
+  background: url("../img/icones/local.svg") no-repeat 0px 2px;
+}
+.contato-endereco p {
+  margin-bottom: 8px;
+}
+.contato-meios a {
+  display: block;
+  max-width: max-content;
+  margin-bottom: 8px;
+  padding-left: 28px;
+}
+.contato-meios a:hover {
+  color: var(--cor-0);
+}
+.contato-meios a:first-child {
+  background: url("../img/icones/email.svg") no-repeat 0px 2px;
+}
+
+.contato-meios a:nth-child(2) {
+  margin-bottom: 32px;
+}
+
+.contato-meios a:nth-child(3) {
+  background: url("../img/icones/telefone.svg") no-repeat 0px 2px;
+  margin-bottom: 60px;
+}
+.contato-redes {
+  display: flex;
+  gap: 32px;
+  padding-left: 28px;
+}
+@media (max-width: 800px) {
+  .contato {
+    grid-template-columns: 1fr;
+  }
+  .contato-dados,
+  .contato-formulario {
+    padding: 20pxx;
+  }
+  .contato-dados {
+    border-radius: 5px 5px 0 0;
+  }
+  .contato-formulario {
+    border-radius: 0 0 5px 5px;
+  }
+  .contato-dados h2 {
+    margin-bottom: 32px;
+  }
+
+  .contato-meios a:nth-child(3) {
+    margin-bottom: 32px;
+  }
+  .contato-redes {
+    margin-bottom: 12px;
+  }
+}
+/* CONTATO FORM */
+.form {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  gap: 20px;
+}
+.form label {
+  display: block;
+  font: 600 1rem/1.5 "Poppins";
+  margin-bottom: 4px;
+}
+
+.form input[type="text"],
+.form input[type="email"],
+textarea {
+  font: 400 1rem/1.5 "Roboto";
+  background: var(--cor-1);
+  border: 1px solid var(--cor-2);
+  padding: 12px;
+  border-radius: 4px;
+  width: 100%;
+  box-sizing: border-box;
+}
+.form input[type="text"]:focus,
+.form input[type="email"]:focus,
+textarea:focus {
+  outline: none;
+  border-color: var(--cor-p1);
+  background: var(--cor-0);
+  box-shadow: 0 0 0 2px #fea;
+}
+
+.form .col-2 {
+  grid-column: span 2;
+}
+@media (max-width: 600px) {
+  .form {
+    grid-template-columns: 1fr;
+  }
+  .form .col-2 {
+    grid-column: 1;
+  }
+}
 /* UTILITARIO */
 
 /* BUTTON */
@@ -929,6 +1057,8 @@ img {
   font-family: "Poppins";
   font-weight: 600;
   max-width: max-content;
+  border: none;
+  cursor: pointer;
 }
 .button:hover {
   background: linear-gradient(#ffb60d, #e59317);
