--- a/css/style.css
+++ b/css/style.css
@@ -1040,6 +1040,70 @@ textarea:focus {
     grid-column: 1;
   }
 }
+
+/* LOJAS */
+
+.lojas {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  gap: 0 40px;
+  padding-top: 120px;
+  padding-bottom: 120px;
+}
+.lojas h2 {
+  grid-column: 1 /-1;
+  margin-bottom: 60px;
+}
+.lojas img {
+  border-radius: 4px 4px 0 0;
+}
+.lojas-item {
+  border-radius: 4px;
+  background-color: #fff;
+  box-shadow: 0 1px 2px rgba(0, 0, 0, 0.1);
+}
+
+.lojas-conteudo {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  gap: 32px 16px;
+  padding: 32px;
+}
+.lojas-conteudo h3,
+.lojas-tempo {
+  grid-column: 1 /-1;
+}
+.lojas-dados {
+  display: grid;
+  border-left: 2px solid var(--cor-2);
+  padding-left: 12px;
+  gap: 8px;
+}
+
+.lojas-tempo {
+  display: flex;
+  align-items: center;
+  gap: 8px;
+}
+
+@media (max-width: 800px) {
+  .lojas {
+    gap: 20px;
+    padding-top: 60px;
+    padding-bottom: 60px;
+  }
+  .lojas h2 {
+    margin-bottom: 32px;
+  }
+  .lojas-conteudo {
+    grid-template-columns: 1fr;
+  }
+}
+@media (max-width: 600px) {
+  .lojas {
+    grid-template-columns: 1fr;
+  }
+}
 /* UTILITARIO */
 
 /* BUTTON */
