--- a/css/style.css
+++ b/css/style.css
@@ -978,7 +978,7 @@ img {
   }
   .contato-dados,
   .contato-formulario {
-    padding: 20pxx;
+    padding: 20px;
   }
   .contato-dados {
     border-radius: 5px 5px 0 0;
