--- a/css/style.css
+++ b/css/style.css
@@ -1,16 +1,22 @@
 :root {
-  --bg-background: #000000;
-  --cor-12: #000000;
-  --cor-11: #111111;
-  --cor-10: #2e2e2e;
-  --cor-2: #ededed;
   --cor-0: #ffffff;
-  --cor-p1: #ffbb00;
-  --cor-p5: #332200;
-  --cor-p2: #e4a30b;
-  --cor-9: #404040;
   --cor-1: #f7f7f7;
+  --cor-2: #ededed;
+  --cor-3: #dedede;
+  --cor-4: #cccccc;
+  --cor-5: #b2b2b2;
   --cor-6: #9c9c9c;
+  --cor-7: #717171;
+  --cor-8: #595959;
+  --cor-9: #404040;
+  --cor-10: #2e2e2e;
+  --cor-11: #111111;
+  --cor-12: #000000;
+  --cor-p1: #ffbb00;
+  --cor-p2: #e4a30b;
+  --cor-p3: #a66f00;
+  --cor-p4: #664400;
+  --cor-p5: #332200;
 }
 body {
   margin: 0;
@@ -53,7 +59,7 @@ img {
 /* HEADER */
 
 .header-bg {
-  background-color: var(--bg-background);
+  background-color: var(--cor-12);
 }
 
 .header {
@@ -1101,6 +1107,159 @@ textarea:focus {
 }
 @media (max-width: 600px) {
   .lojas {
+    grid-template-columns: 1fr;
+  }
+}
+/* ORCAMENTO */
+#orcamento {
+  background: linear-gradient(var(--cor-11) 600px, var(--cor-1) 0px);
+}
+.orcamento {
+  display: grid;
+  grid-template-columns: 5fr 7fr;
+  padding-bottom: 120px;
+}
+.orcamento h2 {
+  text-transform: uppercase;
+  position: relative;
+  display: flex;
+  align-items: center;
+}
+.orcamento h2::before {
+  content: "";
+  display: inline-block;
+  position: absolute;
+  left: -12px;
+  width: 4px;
+  height: 8px;
+  background-color: var(--cor-p1);
+}
+.orcamento-dados,
+.orcamento-produto {
+  padding: 60px;
+  box-shadow: 0 1px 2px rgba(0, 0, 0, 0.1);
+}
+.orcamento-produto {
+  border-radius: 5px 0 0 5px;
+  background: var(--cor-12);
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  align-content: flex-start;
+  gap: 20px;
+}
+.orcamento-produto > * {
+  grid-column: 1/-1;
+}
+
+.orcamento-produto > label {
+  grid-column: initial;
+}
+.orcamento-produto label {
+  color: var(--cor-4);
+  background: var(--cor-10);
+  display: grid;
+  grid-template-columns: auto 1fr auto;
+  align-items: center;
+  padding: 12px 16px;
+  border-radius: 4px;
+  font: 400 1rem/1.5 "Poppins";
+  cursor: pointer;
+  border: 1px solid var(--cor-10);
+}
+.orcamento-produto label::before {
+  content: "";
+  display: inline-block;
+  width: 12px;
+  height: 12px;
+  box-sizing: border-box;
+  border: 1px solid var(--cor-6);
+  border-radius: 50px;
+  margin-right: 8px;
+}
+.orcamento-produto input:checked + label::before {
+  border-color: var(--cor-7);
+  box-shadow: inset 0 0 0 3px var(--cor-0), inset 0 0 0 6px var(--cor-7);
+}
+
+.orcamento-produto label:hover {
+  background: var(--cor-9);
+  border-color: var(--cor-9);
+}
+.orcamento-produto input:focus + label {
+  box-shadow: 0 0 0 2px var(--cor-p1);
+  border-color: var(--cor-12);
+}
+.orcamento-produto label span {
+  display: none;
+}
+.orcamento-produto input:checked + label span {
+  display: block;
+}
+.orcamento-produto input {
+  position: absolute;
+  opacity: 0;
+  pointer-events: none;
+}
+.orcamento-produto input:checked + label {
+  background: var(--cor-0);
+  color: var(--cor-11);
+}
+.orcamento-dados {
+  border-radius: 0 5px 5px 0;
+  background: var(--cor-0);
+}
+
+.orcamento-conteudo {
+  display: none;
+}
+.orcamento-conteudo h2,
+.orcamento-dados h2:nth-of-type(n + 2) {
+  margin-top: 20px;
+}
+#bikcraft:checked ~ #orcamento-bikcraft,
+#seguro:checked ~ #orcamento-seguro {
+  display: grid;
+  gap: 20px;
+}
+.orcamento-detalhes {
+  background: var(--cor-0);
+  padding: 20px;
+  display: none;
+  grid-template-columns: 1fr 1fr;
+  border-radius: 4px;
+  align-items: center;
+}
+.orcamento-detalhes li {
+  display: flex;
+  align-items: center;
+  margin-bottom: 8px;
+}
+.orcamento-detalhes li img {
+  width: 16px;
+  margin-right: 8px;
+}
+.orcamento-produto input:checked + label + .orcamento-detalhes {
+  display: grid;
+}
+@media (max-width: 1200px) {
+  .orcamento-produto,
+  .orcamento-dados {
+    padding: 32px;
+  }
+}
+@media (max-width: 800px) {
+  .orcamento {
+    grid-template-columns: 1fr;
+  }
+  .orcamento-dados {
+    border-radius: 0 0 5px 5px;
+  }
+  .orcamento-produto {
+    border-radius: 5px 5px 0 0;
+  }
+}
+@media (max-width: 400px) {
+  .orcamento-produto {
     grid-template-columns: 1fr;
   }
 }
